# reflective-engineer

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  CONVENTIONS.nd  README.md  fly.toml  index.html  package-lock.json  package.json  sample.env
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
RA.Aid-master/: print_date.py  pyproject.toml  setup.py  start.sh
RA.Aid-master copy/ra_aid/: __main__.py  prompts.py
RA.Aid-master/public/templates/: category-theory.md  chain-of-thought.md
RA.Aid-master/ra_aid/: __main__.py  prompts.py
RA.Aid-master/ra_aid/examples/: hello_world.py
RA.Aid-master/ra_aid/templates/: api-chain.md  automatic-reasoning.md  category-theory.md  chain-of-thought.md  complex-analysis.md  conversation-memory.md  conversational-agents.md  few-shot.md  hierarchical-agents.md  mathematical-logic.md  multi-agent.md  plan-and-execute.md  react-agent.md  react-framework.md  response-shaping.md  retrieval-augmented.md  set-theory.md  sql-chain.md  structured-chat.md  summary-memory.md  system-dynamics.md  tree-of-thoughts.md  zero-shot-agent.md
RA.Aid-master/ra_aid/tools/: programmer.py  ripgrep.py
RA.Aid-master/sparc/: README.md  __init__.py  __main__.py  cli.py  core.py
RA.Aid-master/sparc/modules/: __init__.py  architecture.py  completion.py  pseudocode.py  refinement.py  specification.py
SPARC/: README.md  dna_sequence_specification.sparc
SPARC2/: dna_sequence_specification.sparc
SPARC2/architecture/: dna_sequence_analysis.architecture
SPARC2/completion/: dna_sequence_analysis.completion
SPARC2/pseudocode/: dna_sequence_analysis.pseudocode
agents/: init.sh
agents/dex_optimizer/: README.md  (+1 more)
ruv/: README.md  pyproject.toml  setup.py  start.sh
ruv/ruv/: __init__.py  __main__.py  llm.py  prompts.py  utils.py
ruv/ruv/tools/: __init__.py  core.py
src/: App.tsx  index.css
tutorial/: readme.md
(+121 files in other folders)
