[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparc-cli"
version = "0.1.0"
description = "SPARC CLI - Systematic Programming and Refinement Companion"
readme = "sparc/README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "AI Christianson", email = "ai.christianson@christianson.ai"},
]
dependencies = [
    "click>=8.0.0",
    "ra-aid",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
sparc = "sparc.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["sparc"]
